--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "license": "ISC",
   "devDependencies": {
     "express": "^4.18.2",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "sequelize-cli": "^6.5.2"
   },
   "dependencies": {
-    "body-parser": "^1.20.1"
+    "body-parser": "^1.20.1",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.25.3"
   }
 }
