--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "mysql2": "^2.3.3",
+    "querystring": "^0.2.1",
+    "request": "^2.88.2",
     "sequelize": "^6.25.3",
     "twig": "^1.15.4"
   }
