--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "body-parser": "^1.20.1",
+    "express-session": "^1.17.3",
     "mysql2": "^2.3.3",
     "querystring": "^0.2.1",
     "request": "^2.88.2",
