--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "dependencies": {
     "body-parser": "^1.20.1",
+    "bootstrap": "^5.2.2",
     "express-session": "^1.17.3",
     "mysql2": "^2.3.3",
     "querystring": "^0.2.1",
+    "react-bootstrap": "^2.6.0",
     "request": "^2.88.2",
     "sequelize": "^6.25.3",
     "twig": "^1.15.4"
