--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon -e js,twig --watch src index.js"
+    "dev": "(cd react-quiz && npm run start) & nodemon -e js,twig --watch index.js --watch src"
   },
   "keywords": [],
   "author": "",
@@ -17,11 +17,9 @@
   },
   "dependencies": {
     "body-parser": "^1.20.1",
-    "bootstrap": "^5.2.2",
     "express-session": "^1.17.3",
     "mysql2": "^2.3.3",
     "querystring": "^0.2.1",
-    "react-bootstrap": "^2.6.0",
     "request": "^2.88.2",
     "sequelize": "^6.25.3",
     "twig": "^1.15.4"
