"update react-quiz package.json"

--- a/react-quiz/package.json
+++ b/react-quiz/package.json
@@ -1,4 +1,5 @@
 {
+  "proxy": "http://localhost:4000",
   "name": "react-quiz",
   "version": "0.1.0",
   "private": true,
@@ -38,7 +39,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "http://localhost:4000"
-
+  }
 }
